--- a/实战/运行时和编译时.html
+++ b/实战/运行时和编译时.html
@@ -9,6 +9,13 @@
     <!-- 纯运行时框架示例 -->
     <script>
       function render(obj, root) {
+        // 处理特殊的文本节点对象
+        if (obj.tag === 'text') {
+          const text = document.createTextNode(obj.children)
+          root.appendChild(text)
+          return
+        }
+
         const el = document.createElement(obj.tag)
 
         if (typeof obj.children === 'string') {
@@ -43,8 +50,9 @@
         function convertNode(node) {
           // 如果节点是文本节点
           if (node.nodeType === Node.TEXT_NODE) {
-            // 返回去除首尾空格后的文本内容
-            return node.textContent.trim()
+            const text = node.textContent.trim()
+            // 对文本内容转换为特殊的"文本节点对象"，而不是直接返回字符串
+            return text ? { tag: 'text', children: text } : null
           }
           // 如果节点是元素节点
           if (node.nodeType === Node.ELEMENT_NODE) {
